force-app/main/default/_fdtlt82/Flex-Sandbox/objects/FD_Workflow__c/FD_Workflow__c.object-meta.xml
<CustomObject>
    <label>Workflow</label>
    <nameField>
        <label>Workflow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>