force-app/main/default/_fdtlt82/Flex-Sandbox/objects/FD_Workflow__c/fields/FD_Active_Version__c.field-meta.xml
<CustomField>
    <fullName>FD_Active_Version__c</fullName>
    <defaultValue>1.0</defaultValue>
    <label>Active Version</label>
    <precision>3</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>