force-app/main/default/_fdtlt82/Flex-Sandbox/objects/FD_Workflow__c/fields/FD_Description__c.field-meta.xml
<CustomField>
    <fullName>FD_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>