force-app/main/default/_fdtlt82/Flex-Sandbox/objects/FD_Workflow__c/fields/FD_Path__c.field-meta.xml
<CustomField>
    <fullName>FD_Path__c</fullName>
    <formula>&quot;Root/&quot; + FD_Workflow_Group__c + &quot;/&quot; + FD_Workflow_Subgroup__c + &quot;/&quot; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Path</label>
    <type>Text</type>
</CustomField>