force-app/main/default/_fdtlt82/Flex-Sandbox/objects/FD_Workflow__c/fields/FD_Workflow_Group__c.field-meta.xml
<CustomField>
    <fullName>FD_Workflow_Group__c</fullName>
    <label>Workflow Group</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>