force-app/main/default/_fdtlt82/Flex-Sandbox/objects/FD_Workflow__c/fields/FD_Workflow_Type__c.field-meta.xml
<CustomField>
    <fullName>FD_Workflow_Type__c</fullName>
    <label>Workflow Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Build</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
            </value>
            <value>
                <fullName>Test Definition</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>