force-app/main/default/_fdtlt82/Flex-Sandbox/objects/FD_Workflow__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FD_Workflow_Type__c</columns>
    <columns>FD_Path__c</columns>
    <columns>FD_Active__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>